# C-Tetris

./: CMakeLists.txt  CircularQueue.c  CircularQueue.h  README.md  block.c  block.h  config.h  main.c  ui.c  ui.h  uiConfig.c  uiConfig.h
common/: color.c  color.h  key.c  key.h  util.c  util.h
scene/: gameResultScene.c  gameResultScene.h  initScene.c  initScene.h  mainScene.c  mainScene.h
